# geogrupa-tbi

./: .gitignore  README.md  app.py  classify_traffic_sign.py  create_image_dataset.py  debug_azimuth.py  debug_triangulate.py  get_frame_coords.py  get_gps_data.py  get_telemetry_data.py  main.py  plot_coords.py  pyproject.toml  run_detection.py  triangulate_objects.py  view_dataset.py  visualize_predictions.py
.streamlit/: config.toml
frame_coords/: frame_coords_250.csv  frame_coords_835.csv
gps_tracks/: gps_track_250.html  gps_track_835.html
pages/: map.py  table_data.py
streamlit/: .gitignore  Home.py  create_image_dataset.py  get_telemetry.py  requirements.txt  run_detections_2.py  triangulate_objects.py
streamlit/.streamlit/: config.toml
streamlit/detections/: detections_geo.csv  objects.csv  objects_map.html
streamlit/pages/: 1_🌍_Map.py
telemetry/: telemetry_250.json  telemetry_835.json
