[project]
name = "geogrupa-tbi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "numpy>=2.2.5",
    "openai>=1.79.0",
    "opencv-python>=4.11.0.86",
    "py360convert>=1.0.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "telemetry-parser>=0.3.0",
    "ultralytics>=8.3.128",
]
